fix(overflow-menu): improve color contrast for danger button option

--- a/packages/styles/scss/components/overflow-menu/_overflow-menu.scss
+++ b/packages/styles/scss/components/overflow-menu/_overflow-menu.scss
@@ -344,6 +344,11 @@
     }
   }
 
+  .#{$prefix}--overflow-menu-options__option--danger
+    .#{$prefix}--overflow-menu-options__btn:focus {
+    box-shadow: inset 0 0 0 3px $background;
+  }
+
   .#{$prefix}--overflow-menu-options__option--disabled:hover {
     background-color: $layer;
     cursor: not-allowed;
